3 - Applying Patterns/css/mobile.css
body, html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

body {
  font-family: Roboto, sans-serif;
  font-size: 12px;
  color: #424242;
  padding-top: 58px;
}

h1, h2, h3, h4, h5 {
  margin: 0;
}

header, nav, footer, section, article, div {
  box-sizing: border-box;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

/*
 *
 * Common
 *
 */

.news__more {
  float: right;
  font-size: .8em;
  color: #333;
  text-decoration: none;
}

/*
 *
 * Header
 *
 */

.header {
  width: 100%;
  height: 58px;
  position: fixed;
  top: 0;
  right: 0;
  z-index: 100;
  background: #FFFFFF;
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
}

.header__inner {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 10px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.header__logo {
  height: 100%;
  flex: 0 0 38px;
  margin: 0;
  padding: 0 20px;
}

.header__title {
  margin: 0;
  text-align: center;
  font-weight: 400;
  font-size: 1.4rem;
  color: #545454;
}

.header__toggle {
  padding: 0;
  margin: 0;
  font-size: 32px;
  color: #444444;
}

#nav__toggle {
  padding: 10px 20px;
  cursor: pointer;
}

/*
 *
 * Top Level Navigation
 *
 */

.nav {
  width: 100%;
  margin: 0;
  position: fixed;
  top: 58px;
  right: 0;
  z-index: 99;
  background: #fafafa;;
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.25);
  transition: top .4s ease-out;
}

.nav__list {
  height: 58px;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: space-around;
}

.nav__item {
  flex: 1 0 48px;
  text-align: center;
}

.nav__item a {
  display: block;
  width: 100%;
  padding: 17px 0;
  line-height: 24px;
  text-align: center;
  color: #6f6f6f;
  font-weight: 500;
  text-decoration: none;
  text-transform: uppercase;
  transition: .15s ease-in;
}

.nav__item a:hover {
  color: #454545;
  background: rgba(0, 0, 0, .05);
}

.nav.hidden {
  top: -58px;
}

/*
 *
 * Main
 *
 */

main {
  width: 100%;
  margin: 0 auto;
}

/*
 *
 * Content
 *
 */

/*
 *
 * Hero
 *
 */

.hero {
  width: 100%;
  position: relative;
  background-image: url("../images/dog.jpg");
  background-size: cover;
  height: 300px;
}

.hero article {
  box-sizing: border-box;
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 1.5em;
  height: 40%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  color: #f1f1f1;
}

/*
 *
 * Top News
 *
 */

.top-news {
  width: 100%;
  padding: 0 1.5em;
  margin: 1.5em 0;
}

.news__title {
  font-weight: 400;
  border-bottom: 1px solid #E0E0E0;
  line-height: 32px;
  font-size: 16px;
}

.top-news__item {
  border-bottom: 1px solid #E0E0E0;
  padding: 1em 0;
  line-height: 19px;
}

.top-news__item:last-child {
  border-bottom: none;
}

.top-news__item:before {
  content: "» ";
  color: #3A3A3A;
  font-weight: 500;
}

.top-news__item a {
  text-decoration: none;
  color: #666;
}

.top-news__item a:hover,
.top-news__item a:active {
  text-decoration: underline;
}

/*
 *
 * Sport Scores
 *
 */

.scores {
  width: 100%;
  padding: 0;
  margin: 1.5em 0;
  overflow-x: auto;
}

.scores__table {
  width: 100%;
  border-collapse: collapse;
  color: #4b4b4b;
}

.scores__table th,
.scores__table td {
  padding: 1em;
}

.scores__table th {
  color: #ffffff;
  font-weight: 500;
  text-align: center;
  text-transform: capitalize;
  background-color: #90A4AE;
}

.scores__table tr:nth-child(odd) td {
  background-color: #FAFAFA;
}

.scores__table tr:nth-child(even) td {
  background-color: #F5F5F5;
}

.scores__table td.winner {
  font-weight: bold;
}

.scores__table td:nth-child(3) {
  text-align: right;
}

.scores__table td:nth-child(4) {
  text-align: left;
}

.scores__table td {
  text-align: center;
}

/*
 *
 * Weather
 *
 */

.weather {
  width: 100%;
  padding: 0 2em;
  margin: 2em 0;
}

.weather__location {
  display: block;
  font-weight: 500;
  font-size: 1.5em;
}

.weather__desc {
  display: block;
  font-size: 1.2em;
}

.weather__today {
  display: flex;
  justify-content: center;
  align-items: center;
  border-top: 1px solid #e1e1e1;
  border-bottom: 1px solid #e1e1e1;
  margin: 1em 0;
}

.weather__today__text {
  flex: 0 1 auto;
}

.weather__today__figure {
  margin: 0;
  padding: 0;
  flex: 0 1 auto;
}

.weather__today__image {
  width: 100%;
}

.weather__today__temp {
  font-size: 3em;
}

.weather__today__deg {
  font-size: 2em;
  display: inline;
}

.weather__next {
  display: flex;
  justify-content: space-between;
  margin: 1em 0;
  padding: 1em 0;
  border-bottom: 1px solid #e1e1e1;
}

.weather__next__item {
  text-align: center;
}

.weather__next__item span {
  display: block;
}

.weather__next__image {
  width: 100%;
}

.weather__next__day {
  font-weight: 500;
}

/*
 *
 * Weather
 *
 */

.recent-news {
  padding: 0 1.5em;
  margin: 2em 0;
}

.snippet {
  display: flex;
  margin: 1em 0;
  height: 100px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.snippet__thumbnail {
  width: 25%;
  padding: 0 1em 0 0;
  margin: 0;
}

.snippet__text {
  width: 75%;
  margin: 0;
  padding: 0;
}

.snippet__title {
  font-weight: 500;
  display: block;
}

.snippet__title a {
  text-decoration: none;
  color: #666;
}

.snippet__title a:hover,
.snippet__title a:active {
  text-decoration: underline;
}

/*
 *
 * Footer
 *
 */

footer {
  border-top: 1px solid #E0E0E0;
  padding: 0;
  width: 100%;
  background: #eaeaea;
}

footer ul {
  width: 100%;
  display: flex;
  justify-content: center;
}

footer a {
  width: 100%;
  display: block;
  padding: 1em;
  text-decoration: none;
  font-weight: 500;
  color: #646464;
}

